<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@android:drawable/ic_menu_mylocation"
    android:key="network_setup"
    android:summary="@string/opt_networkdesc"
    android:title="@string/opt_network" >

    <PreferenceCategory android:title="Home Network (mandatory)" >
        <EditTextPreference
            android:dialogTitle="@string/dialog_title_edittext_IP"
            android:key="edittext_IP"
            android:summary="@string/summary_edittext_IP"
            android:title="@string/title_edittext_IP" />

        <ListPreference
            android:defaultValue="10000"
            android:entries="@array/updateInterval"
            android:entryValues="@array/updateIntervalValues"
            android:key="remoteTimeout"
            android:summary="@string/opt_timeout_pubb_desc"
            android:title="@string/opt_timeout_pubb" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Remote Network (optional)" >
        <EditTextPreference
            android:dialogTitle="@string/dialog_title_edittext_IP_pubb"
            android:key="edittext_IP_pubb"
            android:summary="@string/summary_edittext_IP_pubb"
            android:title="@string/title_edittext_IP_pubb" />
    </PreferenceCategory>
    <PreferenceCategory android:title="VPN Network (optional)" >
        <EditTextPreference
            android:dialogTitle="@string/dialog_title_edittext_IP_VPN"
            android:key="edittext_IP_VPN"
            android:summary="@string/summary_edittext_IP_VPN"
            android:title="@string/dialog_title_edittext_IP_VPN" />
    </PreferenceCategory>
    
    <EditTextPreference
        android:name="userindex"
        android:dialogTitle="@string/opt_userindex"
        android:inputType="number"
        android:key="userindexIC"
        android:title="@string/opt_userindex" />

    <EditTextPreference
        android:name="nodeindex"
        android:dialogTitle="@string/opt_nodeindex"
        android:inputType="number"
        android:key="nodeindexIC"
        android:title="@string/opt_nodeindex" />

    <Preference
        android:name="credits"
        android:key="credits"
        android:summary="@string/opt_credits_desc"
        android:title="@string/opt_credits" />

</PreferenceScreen>