<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/containerlistaProgrammi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1" >

    <ImageView
        android:id="@+id/scene_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dip"
        android:alpha="0.5"
        android:contentDescription="@string/app_name"
        android:src="@drawable/remote" />

    <TextView
        android:id="@+id/TextViewProgramsDesc"
        style="@style/CodeFontSmall"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="2dp"
        android:text="@string/programs_desc" />

    <TextView
        android:id="@+id/TextViewTypicals"
        style="@style/CodeFontTitleBig"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/TextViewProgramsDesc"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:text="@string/programs_unexecuted" >
    </TextView>

    <ListView
        android:id="@+id/ListViewListaProgs"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/TextViewTypicals"
        android:cacheColorHint="@color/trans_black"
        android:divider="@android:color/transparent"
        android:fadeScrollbars="true"
        android:fadingEdge="vertical"
        android:requiresFadingEdge="vertical" >
    </ListView>

</RelativeLayout>