<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/relativeLayoutStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/refreshContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/refreshButton"
                    style="@style/CodeFontTitle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ping" />

                <TextView
                    android:id="@+id/textStatus1"
                    style="@style/CodeFontMain"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:text="@string/test_ping" />
            </LinearLayout>

            <View
                android:id="@+id/spacer1"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_below="@id/refreshContainer"
                android:layout_marginBottom="2dip"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                android:background="@color/plain_grey" >
            </View>

            <LinearLayout
                android:id="@+id/refreshContainer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/spacer1"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/resetButton"
                    style="@style/CodeFontTitle"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/poll" />

                <TextView
                    android:id="@+id/textStatus3"
                    style="@style/CodeFontMain"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:text="@string/test_poll" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/refreshContainer6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/refreshContainer2"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/typreqButton"
                    style="@style/CodeFontTitle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/test_typ_title" />

                <TextView
                    android:layout_width="0dp"
                    style="@style/CodeFontMain"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:text="@string/test_typ" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_below="@id/refreshContainer6"
                android:layout_marginBottom="2dip"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                android:background="@color/plain_grey" >
            </View>

            <LinearLayout
                android:id="@+id/refreshContainer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/refreshContainer6"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/healthreqButton"
                    style="@style/CodeFontTitle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/health" />

                <TextView
                    android:id="@+id/textStatus4"
                    style="@style/CodeFontMain"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:text="@string/test_health" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_below="@id/refreshContainer3"
                android:layout_marginBottom="2dip"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                android:background="@color/plain_grey" >
            </View>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutForce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textForce1"
                style="@style/CodeFontMain"
                android:text="@string/manual_force" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textForce1"
                android:entries="@array/nodes_array"
                android:entryValues="@array/nodes_array"
                android:prompt="@string/manual_id_prompt" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textForce1"
                android:layout_toRightOf="@+id/spinner1"
                android:entries="@array/slot_array"
                android:entryValues="@array/slot_array"
                android:prompt="@string/manual_slot_prompt" />
            <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->

            <LinearLayout
                android:id="@+id/midDivider"
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textForce1"
                android:layout_toRightOf="@+id/spinner2"
                android:hint="@string/manual_cmd_hint"
                android:inputType="number" >
            </EditText>

            <Button
                android:id="@+id/buttonForce"
                style="@style/CodeFontTitle"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textForce1"
                android:layout_toRightOf="@+id/editText1"
                android:gravity="center"
                android:text="Force" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayoutOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dip" >

            <TextView
                android:textIsSelectable="false"
                android:id="@+id/textOutput1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:textIsSelectable="false"
                android:id="@+id/textOutputError"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>